--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                     <span class="say"> Happiest Birthday </span><br>
                     <span class="say">Dear Saumya </span><br>
                     <span class="say">May God Bless You</span><br>
+                    <span class="say">With Good Health</span><br>
+                      <span class="say">Success</span><br>
                     <span class="say">May all your dreams comes true</span><br>
                     <span class="say">Enjoy your special day💕</span><br>
                     <span class="say">Your's Kartikeya🫶! </span><br>
@@ -196,7 +198,7 @@
 
             var textAnimate = eval(Jscex.compile("async", function () {
                 var together = new Date();
-                together.setFullYear(2003, 11, 30); 			//时间年月日
+                together.setFullYear(2003, 10, 30); 			//时间年月日
                 together.setHours(0);						//小时	
                 together.setMinutes(0);					//分钟
                 together.setSeconds(0);					//秒前一位
